# RL

./: .gitignore  pyproject.toml
data_base/: Dockerfile  data_base.py  pyproject.toml
data_base/src/: model.py  store.py  web.py
data_gathering/: data_gathering.py  main.py  pyproject.toml
data_gathering/src/: agent.py  environment.py  history_gatherer.py  model.py  web.py
data_gathering/src/agent/: __init__.py  algo.py
rl/: main.py
rl/data_gathering/: agent.py  data_gatherer.py  data_store.py  environment.py  history_gatherer.py  history_store.py  types.py
rl/data_store/: data_store.py
rl/network_management/: trainer.py
