[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"
wheel = "^0.43.0"
torch = "^2.2.2"
pydantic = "^2.7.0"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
