[tool.poetry]
name = "data-gathering"
version = "0.1.0"
description = ""
authors = ["fabir <fabi.roth@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
gym = "^0.26.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
